--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+venv/
+static/
+super_info_core/media/
+super_info_core/config.py
+.idea/
+
+
 # Created by https://www.toptal.com/developers/gitignore/api/python,django
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,django
 
